@@ -23,7 +23,6 @@ import it.unimi.dsi.fastutil.ints.IntList;
 import java.util.Collection;
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 import org.apache.tuweni.bytes.Bytes32;
 import tech.pegasys.teku.api.exceptions.BadRequestException;
 import tech.pegasys.teku.api.schema.SignedBeaconBlock;
@@ -233,7 +232,7 @@ public class ValidatorDataProvider {
     return validatorApiChannel.sendSyncCommitteeMessages(
         messages.stream()
             .flatMap(message -> checkInternalCommitteeSignature(message).stream())
-            .collect(Collectors.toList()));
+            .toList());
   }
 
   private Optional<SyncCommitteeMessage> checkInternalCommitteeSignature(
