@@ -23,7 +23,6 @@ import java.util.Arrays;
 import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 import java.util.stream.Stream;
 import picocli.CommandLine.Model.CommandSpec;
@@ -73,7 +72,7 @@ public class KeyGenerator {
   }
 
   public List<ValidatorKeys> generateKeys() {
-    return generateKeysStream().collect(Collectors.toList());
+    return generateKeysStream().toList();
   }
 
   public Stream<ValidatorKeys> generateKeysStream() {
