@@ -50,7 +50,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.Set;
-import java.util.stream.Collectors;
 import okhttp3.Credentials;
 import okhttp3.HttpUrl;
 import okhttp3.MediaType;
@@ -145,7 +144,7 @@ public class OkHttpValidatorRestApiClient implements ValidatorRestApiClient {
     return post(
         GET_ATTESTATION_DUTIES,
         Map.of("epoch", epoch.toString()),
-        validatorIndices.stream().map(UInt64::valueOf).collect(Collectors.toList()),
+        validatorIndices.stream().map(UInt64::valueOf).toList(),
         createHandler(PostAttesterDutiesResponse.class));
   }
 
@@ -284,7 +283,7 @@ public class OkHttpValidatorRestApiClient implements ValidatorRestApiClient {
     return post(
         GET_SYNC_COMMITTEE_DUTIES,
         Map.of("epoch", epoch.toString()),
-        validatorIndices.stream().map(UInt64::valueOf).collect(Collectors.toList()),
+        validatorIndices.stream().map(UInt64::valueOf).toList(),
         createHandler(PostSyncDutiesResponse.class));
   }
 
